# ocr-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.multi-gpu.yaml  docker-compose.yaml  main.py  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  ocr.py
app/core/: config.py
app/schemas/: ocr.py
app/services/: ocr_service.py
deploy/nginx/: ocr-api-upstream.conf
tests/: test_health.py  test_ocr_scan.py  test_ocr_service.py
