[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pillow>=11.0.0,<12.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.18,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]
ocr-deepseek = [
    "addict>=2.4.0,<3.0.0",
    "einops>=0.8.0,<1.0.0",
    "easydict>=1.13,<2.0",
    "img2pdf>=0.5.1,<1.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "PyMuPDF>=1.24.0,<2.0.0",
    "tokenizers==0.20.3",
    "torch>=2.4.0,<3.0.0",
    "torchvision>=0.19.0,<1.0.0",
    "transformers>=4.46.0,<5.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
